style: apply 2px global gap and fix launcher visibility

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -19,8 +19,8 @@ window#waybar {
     border-radius: 6px;
     padding-left: 1px;
     padding-right: 1px;
-    margin-left: 4px;
-    margin-right: 4px;
+    margin-left: 2px;
+    margin-right: 2px;
     margin-top: 2px;
     margin-bottom: 2px;
     border-width: 2px;
